--- a/2. Starting AI Project/2. Workflow of a ML Project.md
+++ b/2. Starting AI Project/2. Workflow of a ML Project.md
@@ -18,7 +18,15 @@ We will take _Echo / Alexa_ as an example to understand `Key Steps for Machine L
 
 1. If you want to build an AI system or build a machine learning system to figure out when a user has said the word Alexa, **the first step is to collect data**.
    1. To collect data you miht go to few and ask them to say word "Alexa", and you record the audio for that.
-   2. ou'll also get a bunch of people to say other words like "Hello," or say lots of other words and record the audio of that as well.
+   2. you'll also get a bunch of people to say other words like "Hello," or say lots of other words and record the audio of that
+   3. Labelled Voice
+   ![Collecting Data](CollectingData.png?raw=true "Collecting Data")
 
 2. **Train The Model**
    1. Means you will use a machine learning algorithm to learn an input to output or A to B mapping, where the input A would be an audio clip.
+   In the case of the first audio clip above, hopefully, it will tell you that the user said "Alexa".
+   In the case of audio clip two, the system will learn to recognize that the user has said "Hello."
+   ![Collecting Data](TrainModel.png?raw=true "Collecting Data")
+
+   2. **_Iterate_** many times until good enough.
+3. Deploy Model
